--- a/workspace/JavaParser/.classpath
+++ b/workspace/JavaParser/.classpath
@@ -11,5 +11,7 @@
 	<classpathentry kind="lib" path="/home/felipe/Documentos/Dev/hamcrest-all-1.3.jar"/>
 	<classpathentry kind="lib" path="/home/felipe/Documentos/Dev/hibernate/hibernate-core-5.2.6.Final.jar"/>
 	<classpathentry kind="lib" path="/home/felipe/Documentos/Dev/hibernate/hibernate-jpa-2.0-api-1.0.1.Final.jar"/>
+	<classpathentry kind="lib" path="/home/felipe/Documentos/Dev/hibernate/jboss-logging-3.1.0.GA.jar"/>
+	<classpathentry kind="lib" path="/home/felipe/Documentos/Dev/hibernate/jta-1.1.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
