--- a/workspace/JavaParser/.classpath
+++ b/workspace/JavaParser/.classpath
@@ -1,17 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
+	<classpathentry including="**/*.java" kind="src" output="target/classes" path="src">
 		<attributes>
-			<attribute name="owner.project.facets" value="java"/>
+			<attribute name="optional" value="true"/>
+			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="/home/felipe/Documentos/Dev/hibernate/hibernate-entitymanager-5.2.6.Final.jar"/>
-	<classpathentry kind="lib" path="/home/felipe/Documentos/Dev/junit-4.11.jar"/>
-	<classpathentry kind="lib" path="/home/felipe/Documentos/Dev/hamcrest-all-1.3.jar"/>
-	<classpathentry kind="lib" path="/home/felipe/Documentos/Dev/hibernate/hibernate-core-5.2.6.Final.jar"/>
-	<classpathentry kind="lib" path="/home/felipe/Documentos/Dev/hibernate/hibernate-jpa-2.0-api-1.0.1.Final.jar"/>
-	<classpathentry kind="lib" path="/home/felipe/Documentos/Dev/hibernate/jboss-logging-3.1.0.GA.jar"/>
-	<classpathentry kind="lib" path="/home/felipe/Documentos/Dev/hibernate/jta-1.1.jar"/>
-	<classpathentry kind="output" path="build/classes"/>
+	<classpathentry kind="src" output="target/test-classes" path="src/test/java">
+		<attributes>
+			<attribute name="optional" value="true"/>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry kind="output" path="target/classes"/>
 </classpath>
